# yast-system-update

./: README.md  RPMNAME  yast2-system-update.spec.in
agents/: Makefile.am
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-system-update.changes
src/: Makefile.am  SystemUpdate.ycp  helps.ycp  inst_system_update_prepare_system.ycp  inst_system_update_repo_select.ycp  system-update.sh  system-update.ycp
src/config/: Makefile.am  system-update.desktop  system-update.xml
testsuite/tests/: SystemUpdate.out  SystemUpdate.ycp
